# GNOME_extension

./: README.md  UNINSTALL.md  planning.md  pyproject.toml  requirements.txt
config/: settings.json  tools_config.json
config/systemd/: gnome-ai-assistant.service
docs/: PRODUCTION_DEPLOYMENT.md
scripts/: install.sh  install_extension.sh  setup_systemd.sh  uninstall.sh
src/extension/: extension.js  metadata.json  stylesheet.css
src/extension/ui/: chat_window.js  permission_dialog.js
src/gnome_ai_assistant/: __init__.py  main.py
src/gnome_ai_assistant/core/: __init__.py  agentic_engine.py  config.py  memory.py  permissions.py  service.py
src/gnome_ai_assistant/interfaces/: __init__.py  cli.py  notifications.py  voice.py  web.py
src/gnome_ai_assistant/llm/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
src/gnome_ai_assistant/perception/: __init__.py  clipboard_monitor.py  context_manager.py  screen_reader.py
src/gnome_ai_assistant/tools/: __init__.py  base.py  file_manager.py  network.py  package_manager.py  package_manager_enhanced.py  spotify.py  spotify_enhanced.py  system_control.py  web_browser.py  window_manager.py
src/gnome_ai_assistant/utils/: __init__.py  dbus_helper.py  logger.py  security.py
tests/: __init__.py  conftest.py
tests/integration/: test_complete_system.py  test_full_system.py
tests/unit/: test_network.py  test_permissions.py  test_service.py  test_web_browser.py
